--- a/src/styles.scss
+++ b/src/styles.scss
@@ -365,7 +365,7 @@ a {
             content: '';
             position: absolute;
             left: 0px;
-            bottom: -3px;
+            bottom: -1px;
             display: block;
             width: 100%;
             height: 4px;
